Fix for Bug #52686  	mysql_stmt_attr_[gs]et arg. points to incorrect type

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@304146 c90b9560-bf6c-de11-be94-00142212c4b1